tests/bug_detector_tests/ImplicitTypeConversion.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=ImplicitTypeConversion
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
* Bug Detector * \n\
ImplicitTypeConversion.js:4:1~4:18: [Warning] Implicit type-conversion in equality comparison 'null == undefined'. \n\
ImplicitTypeConversion.js:9:10~9:19: [Warning] Trying to convert undefined to number. \n\
ImplicitTypeConversion.js:13:1~13:18: [Warning] Implicit type-conversion in equality comparison 'boolean(true) == undefined'. \n\
ImplicitTypeConversion.js:13:9~13:18: [Warning] Trying to convert undefined to number. \n\
ImplicitTypeConversion.js:14:1~14:13: [Warning] Implicit type-conversion in equality comparison 'boolean(true) == null'. \n\
ImplicitTypeConversion.js:15:1~15:12: [Warning] Implicit type-conversion in equality comparison 'boolean(true) == number(100)'. \n\
ImplicitTypeConversion.js:16:1~16:14: [Warning] Implicit type-conversion in equality comparison 'boolean(true) == string("str")'. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      0 (  0.00%) | \n\
|  TypeErrors        :      0 (  0.00%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      7 (100.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      2 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      5 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      0 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
